	- Updated Apache templates to support 2.4.x branch

SETUP:
	- Removed php5-adodb package from distribution packages files
	- The i-MSCP apache_php_fpm server impl. is now the default choice for distributions  supporting it officialy
	- Fixed: Plugins which provide a backend end with unknown error after update

ENGINE:
	- Added support for Apache 2.4.x branch
	- Fixed: Plugin module is broken: Unable to disable, uninstall... any plugin

Tickets:
	- Fixed #745: Defect - Disk detail in dovecot doesn't include aliases
	- Fixed #779: Defect - When migrating from ispcp the reseller and admin logos are lost
	- Fixed #834: Cosmetics - Ticket system menu names
	- Fixed #835: Task - Migration script - ispCP - Remove old php5-fcgi-starter
	- Fixed #838: Bug - Installer skips PHP INI Level dialog for apache fcgi
	- Fixed #852: Bug - Software installer - Unable to install any software
	- Fixed #858: Task - Remove php5-adodb package
	- Fixed #861: Bug -SQLSTATE[42000]: Syntax error or access violation

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc3
------------------------------------------------------------------------------------------------------------------------

2013-07-23: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc3

CONFIGS:
	- Removed Amavis, ClamAV and SpamAssassin configuration (Such service must be provided as plugin)

ENGINE:
	- Added config_readonly option in bootstrap
	- Added cron job for deactivation of entities belonging to an expired account
	- Fixed: Allow to get raw db connection
	- Fixed: unable to remove htgroup
	- Fixed: TERM environment variable not set (IMSCP::Debug library)
	- Removed 'dnschange' status
	- Updated 'change' status to 'tochange' and 'delete' status to 'todelete'

GUI:
	- Added plugin archive upload feature (tar.gz, tar.bz2 and zip)
	- Updated plugin API (Several BC breaks expected)
	- Removed 'dnschange' status